# ncnn-android-ppocrv5

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/jni/: CMakeLists.txt
gradle/: libs.versions.toml
